<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="325dp"
        android:layout_height="435dp"
        android:background="@drawable/rectangle_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/TitleStyle"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/nunito_extrabold"
        android:gravity="center"
        android:text="@string/tip_calculator"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toTopOf="@id/view" />

    <EditText
        android:id="@+id/edCostOfService"
        style="@style/EditTextStyle"
        android:layout_height="48dp"
        android:layout_marginTop="25dp"
        android:autofillHints="name"
        android:hint="@string/cost_of_service"
        app:layout_constraintEnd_toEndOf="@id/title"
        app:layout_constraintStart_toStartOf="@id/title"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/serviceQuestion"
        style="@style/TitleStyle"
        android:layout_marginTop="14dp"
        android:text="@string/how_was_the_service"
        app:layout_constraintEnd_toEndOf="@id/edCostOfService"
        app:layout_constraintStart_toStartOf="@id/edCostOfService"
        app:layout_constraintTop_toBottomOf="@id/edCostOfService" />

    <RadioGroup
        android:id="@+id/tipOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@id/serviceQuestion"
        app:layout_constraintStart_toStartOf="@id/serviceQuestion"
        app:layout_constraintTop_toBottomOf="@id/serviceQuestion">

        <RadioButton
            android:id="@+id/optionTwentyPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20" />

        <RadioButton
            android:id="@+id/optionEighteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18" />

        <RadioButton
            android:id="@+id/optionFifteenPercent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ok_15" />

    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swRoundUpTip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/round_up_tip"
        app:layout_constraintEnd_toEndOf="@id/tipOptions"
        app:layout_constraintStart_toStartOf="@id/tipOptions"
        app:layout_constraintTop_toBottomOf="@id/tipOptions" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCalculate"
        style="@style/ButtonStyle"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="@id/swRoundUpTip"
        app:layout_constraintStart_toStartOf="@id/swRoundUpTip"
        app:layout_constraintTop_toBottomOf="@id/swRoundUpTip" />

    <TextView
        android:id="@+id/tipResult"
        style="@style/TitleStyle"
        android:layout_marginTop="25dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@id/view"
        app:layout_constraintStart_toStartOf="@id/view"
        app:layout_constraintTop_toBottomOf="@id/view"
        tools:text="Tip Amount: $10" />

</androidx.constraintlayout.widget.ConstraintLayout>